делает запрос, дебоунс, проверку

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
       />
     </head>
   </head>
-  <body>
+  <body class="body">
     <!-- <include src="./partials/hero-header.html"></include>
     <include src="./partials/products.html"></include>
     <include src="./partials/about.html"></include>
@@ -29,8 +29,11 @@
     <include src="./partials/modal-products-icecream.html"></include>
     <include src="./partials/modal-maps.html"></include>
     -->
-    <h1>Home work 12</h1>
+    <h1 >Home work 12</h1>
     <input class="input" placeholder=" название страны" type="text">
+    <div class='container'>
+      <!-- сюда рендерится список стран-->
+    </div>
 
     
 
