--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
     -->
     <h1 >Home work 12</h1>
     <input class="input" placeholder=" название страны" type="text">
-    <div class='container'>
+    <div id="container">
       <!-- сюда рендерится список стран-->
     </div>
 
@@ -39,6 +39,7 @@
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
+
     <!-- <script src="../js/mobile-menu.js"></script>
     <script src="../js/modal.js"></script>
     <script src="../js/modal-icecream.js"></script>
