--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
       />
     </head>
   </head>
-  <body class="body">
+  <body class="country-body">
     <!-- <include src="./partials/hero-header.html"></include>
     <include src="./partials/products.html"></include>
     <include src="./partials/about.html"></include>
@@ -29,11 +29,15 @@
     <include src="./partials/modal-products-icecream.html"></include>
     <include src="./partials/modal-maps.html"></include>
     -->
-    <h1 >Home work 12</h1>
-    <input class="input" placeholder=" название страны" type="text">
-    <div id="container">
-      <!-- сюда рендерится список стран-->
+    <div class="country-content">
+          <h1 class="country-title">ПОИСК СТРАН</h1>
+          <input class="input" placeholder="введите название страны" type="text">
+          <div id="container">
+  <!-- сюда рендерится список стран-->
+           </div>
+
     </div>
+   
 
     
 
