--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,7 @@
     <div class="country-content">
           <h1 class="country-title">ПОИСК СТРАН</h1>
           <input class="input" placeholder="введите название страны" type="text">
+          <button type="button" class="reset-button" >RESET</button>
           <div id="container">
   <!-- сюда рендерится список стран-->
            </div>
