--- a/src/index.html
+++ b/src/index.html
@@ -31,8 +31,12 @@
     -->
     <div class="country-content">
           <h1 class="country-title">ПОИСК СТРАН</h1>
+          <div class="country-menu">
           <input class="input" placeholder="введите название страны" type="text">
-          <button type="button" class="reset-button" >RESET</button>
+          <button type="button" id="reset-button" class="reset-button-style" >RESET</button>
+          </div>
+
+
           <div id="container">
   <!-- сюда рендерится список стран-->
            </div>
